// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog/gitlab getChangeLogJSON handles empty GitLab tags response 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON handles empty GitLab tags response 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON supports gitlab enterprise and gitlab enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseUrl": "https://gitlab-enterprise.example.com/api/v4/",
    "baseUrl": "https://gitlab-enterprise.example.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab-enterprise.example.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON supports self-hosted gitlab changelog 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseUrl": "https://git.test.com/api/v4/",
    "baseUrl": "https://git.test.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://git.test.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON uses GitLab tags 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON uses GitLab tags 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON uses GitLab tags with error 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON uses GitLab tags with error 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/repository/tree?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/meno%2fdropzone/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog/gitlab getChangeLogJSON works without GitLab 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;
